fix cv width on small scree

--- a/style.css
+++ b/style.css
@@ -150,6 +150,10 @@ p {
         max-width: 600px;
     }
 
+    .cv-section {
+        width: 100%;
+    }
+
     .sticks {
         max-width: 600px;
         padding: 0px 0px 20px 0px;
